fixed left gray spacing on small posts

--- a/react-app/src/components/Posts/Post.css
+++ b/react-app/src/components/Posts/Post.css
@@ -25,8 +25,13 @@
 }
 
 .post-inner-container-left {
-    width: 100%;
+    width: 50px;
     background-color: #F6F7F8;
+}
+
+.post-inner-container-right {
+    width: 100%;
+    height: 100%;
 }
 
 .post-inner-container-right:hover {
